--- a/JupyterFiles/KR_Session_5_FEB_10_2024.ipynb
+++ b/JupyterFiles/KR_Session_5_FEB_10_2024.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import start\n",
+    "\n",
     "#range :\n",
     "\n",
     "range(start,end,step)\n",
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "6b36e580",
    "metadata": {},
    "outputs": [
@@ -197,6 +199,28 @@
     "\n",
     "while x<=10:\n",
     "    print(x)\n",
+    "    x=x+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ce9f79f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "x=1\n",
+    "\n",
+    "while x<=10:\n",
+    "    print(x,end=\" \")\n",
     "    x=x+1"
    ]
   },
@@ -557,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
