--- a/JupyterFiles/KR_Session_6_FEB_11_2024.ipynb
+++ b/JupyterFiles/KR_Session_6_FEB_11_2024.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "12673f67",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,8 @@
     }
    ],
    "source": [
-    "len(x)"
+    "len(x)\n",
+    "#length of the list "
    ]
   },
   {
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "59ffb99c",
    "metadata": {},
    "outputs": [
@@ -96,12 +97,15 @@
     }
    ],
    "source": [
-    "print(dir(list))"
+    "print(dir(list))  # dir is a function that returns a list of attributes and methods of an object\n",
+    "\n",
+    "# methods with __ are special methods or magic methods or dunder methods or private methods that are for internal use of the list, \n",
+    "# other methods are public methods that are for external use of the list or for us/users to use"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "68ffbab5",
    "metadata": {},
    "outputs": [
@@ -119,24 +123,45 @@
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
     "\n",
-    "#x.append(\"Deepak\")\n",
-    "#x.insert(1,\"Ram\")\n",
-    "#x.extend([56,89])\n",
+    "#x.append(\"Deepak\"). # add element at last \n",
+    "#x.insert(1,\"Ram\") # add element at specific position\n",
+    "#x.extend([56,89])  # add multiple element at last  \n",
     "\n",
+    "# me Notes\n",
+    "# x.remove(\"Amit\"). # remove element  \n",
+    "# x.pop() # remove element at last \n",
+    "# x.pop(2) # remove element at specific position   \n",
+    "\n",
+    "# x.sort() # sort element in ascending order \n",
+    "# x.reverse() # sort element in descending order \n",
+    "# x.index(\"Delhi\") # find index of element \n",
+    "# x.count(\"Amit\") # count element \n",
+    "# x.copy() # copy element\n",
+    "# x.clear() # clear element\n",
+    " \n",
     "x\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "67db2093",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ways to copy a list :\n",
+    "deep copy : copy.copy() or copy.deepcopy()- creates a new list and copies the elements from the original list to the new list.\n",
+    "                  x and y both point to different memory area\n",
+    "                  change in one list will not affect the other list.\n",
+    "\n",
+    "shallow copy : x=y -  means that the new list is a reference to the original list.\n",
+    "                making change in one list will affect the other list.\n",
+    "                 x and y both point to same memory area\n",
     "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
     "\n",
-    "y=x\n",
+    "y=x # shallow copy\n",
+    "\n",
     "\n"
    ]
   },
@@ -236,14 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "367a485b",
    "metadata": {},
    "outputs": [],
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
     "\n",
-    "y=x.copy()"
+    "y=x.copy() #deep copy"
    ]
   },
   {
@@ -321,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "1ee6b1bd",
    "metadata": {},
    "outputs": [
@@ -337,12 +362,12 @@
     }
    ],
    "source": [
-    "x"
+    "x  #only in jupitor notebook we can print without print statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "22360cb6",
    "metadata": {},
    "outputs": [
@@ -360,14 +385,14 @@
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
     "\n",
-    "x.clear()\n",
-    "\n",
-    "x"
+    "x.clear() #clear the list\n",
+    "# empty the list\n",
+    "print(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "2a3f55c2",
    "metadata": {},
    "outputs": [
@@ -384,9 +409,19 @@
    ],
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678,\"Delhi\"]\n",
+    "#to find the index number of an element\n",
+    "x.index() -> index: def index(\n",
+    "                                self: list[int | str],\n",
+    "                                value: int | str,\n",
+    "                                start: SupportsIndex = 0, default value is 0 for start\n",
+    "                                stop: SupportsIndex = ..., default value is end of list for stop\n",
+    "                                /\n",
     "\n",
-    "#x.index(\"Delhi\")\n",
-    "#x.index(\"Delhi\",4)"
+    "\n",
+    "#x.index(\"Delhi\") # returns the first index of Delhi ->3, starts search from index 0\n",
+    "#x.index(\"Delhi\",4) #returns the index of Delhi starting from index 4\n",
+    "\n",
+    "# write a program to find all the index of Delhi in a list"
    ]
   },
   {
@@ -402,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2189531f",
    "metadata": {},
    "outputs": [
@@ -420,12 +455,13 @@
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678,\"Delhi\"]\n",
     "\n",
-    "x.count(\"Delhi\")"
+    "x.count(\"Delhi\") # counts the number of times \"Delhi\" appears in the list\n",
+    "# if doesnt exist it returns 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "72e913d3",
    "metadata": {},
    "outputs": [
@@ -443,7 +479,12 @@
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
     "\n",
-    "x.pop()\n"
+    "x.pop() #fetch the element and remove delete it\n",
+    "# if no index is specified then it will remove the last element\n",
+    "default value of pop is -1 which means last element\n",
+    "\n",
+    "x.pop(2) #fetch the element and remove delete it and return it\n",
+    "at index 2  which is \"Delhi\" because index is 0 based and \n"
    ]
   },
   {
@@ -469,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "38a78e0b",
    "metadata": {},
    "outputs": [
@@ -487,7 +528,9 @@
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
     "\n",
-    "x.pop(1)"
+    "x.pop(1) #fetch and remove /delete index 1 element or at the given index\n",
+    "# if no index is specified then it will remove the last element\n",
+    "\n"
    ]
   },
   {
@@ -513,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "aa2559ee",
    "metadata": {},
    "outputs": [
@@ -531,7 +574,7 @@
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678,\"Delhi\"]\n",
     "\n",
-    "#x.remove(\"Delhi\")\n",
+    "#x.remove(\"Delhi\") #removes the first matching element even if there are multiple occurences of the element \"Delhi\"\n",
     "#x.remove(\"Delhi\")\n",
     "x"
    ]
@@ -550,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "910519e0",
    "metadata": {},
    "outputs": [
@@ -568,14 +611,14 @@
    "source": [
     "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
     "\n",
-    "x.reverse()\n",
+    "x.reverse() #reverse the list\n",
     "\n",
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "8988f282",
    "metadata": {},
    "outputs": [
@@ -585,15 +628,19 @@
        "[45, 23, 23, 21, 10, 9, 7]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "x=[101,\"Amit\",23,\"Delhi\",45678]\n",
+    "# x.sort()\n",
+    "# TypeError: '<' not supported between instances of 'str' and 'int'\n",
+    "\n",
     "y=[23,10,9,45,7,21,23]\n",
     "\n",
-    "#y.sort()\n",
+    "#y.sort() \n",
     "y.sort(reverse=True)\n",
     "y"
    ]
@@ -610,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "8a854db1",
    "metadata": {},
    "outputs": [
@@ -630,7 +677,21 @@
     "#Tuple : ( , )\n",
     "#Tuple : based on index\n",
     "#Tuple : homo ,hetro,duplicate\n",
-    "#Tuple : immutable : \n",
+    "#Tuple : immutable : also called a read-only data store \n",
+    "#Tuple : for critical scenario where values dont change \n",
+    "# for tuple , bracket () not mandatory , but list [] is mandatory\n",
+    "# but if without bracket only 1 value given , doesnt consider tuple , considers as integer \n",
+    "# eg \n",
+    "x= 23 #-> not a tuple\n",
+    "x= (23) #-> is not  a tuple\n",
+    "x= (23,) #-> is now a tuple, add just a comma \n",
+    "x= 23, #-> is now a tuple, add just a comma \n",
+    "x= tuple() #->creating an empty tuple\n",
+    "\n",
+    "\n",
+    "x= (23) #-> is not  a tuple\n",
+    "\n",
+    "x=(101,\"Amit\",23,\"Delhi\",674321)\n",
     "\n",
     "\n",
     "x=(101,\"Amit\",23,\"Delhi\",674321)\n",
@@ -684,31 +745,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "21751726",
    "metadata": {},
    "outputs": [],
    "source": [
     "x=(101,\"Amit\",23,\"Delhi\",674321)\n",
-    "\n",
+    "# get data with index\n",
     "#x[1]\n",
     "#x[-1]\n",
-    "#x[1:4]"
+    "#x[1:4]. slicing also done "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "1bd32f7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (75630604.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mx[1]= \"Deepak\". #-> cant do ..... modifications not allowed in a tuple\u001b[39m\n                    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "x=(101,\"Amit\",23,\"Delhi\",674321)\n"
+    "x=(101,\"Amit\",23,\"Delhi\",674321)\n",
+    "x[1]= \"Deepak\". #-> cant do ..... modifications not allowed in a tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "f8b981d4",
    "metadata": {},
    "outputs": [
@@ -724,7 +795,10 @@
     }
    ],
    "source": [
-    "len(x)"
+    "# Length is not a modification. Length is just getting the length of it, so we can do that in two. \n",
+    "len(x) \n",
+    "\n",
+    "# \"count\" and \"index\" are only two methods available in a tuple, both of which do not modify it.\n"
    ]
   },
   {
@@ -755,35 +829,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "e853f69e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 101, 'name': 'Deepak', 'age': 23, 'city': 'Delhi'}"
+       "{'id': 101, 'name': 'Amit', 'age': 23, 'city': 'Allahabad'}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#dict : collection of keys and values :\n",
-    "#dict : {k:v,k:v,k:v}\n",
-    "#dict(key) :  immutable,unique\n",
-    "#dict(value) :\n",
-    "#dict : mutable : \n",
+    "#dict : collection of keys and values :Like hash map \n",
+    "#dict : {k:v,k:v,k:v}. Like json data or yaml \n",
+    "#dict(key) :  immutable,unique \n",
+    "# eg : int,float ,bool,string,complex,tuple\n",
+    "#dict(value) : multiple values can be assigned to a key as a value as a list against a particular key. \n",
+    "d1={'id':101,'name':['Amit','Ram','Shyam'],'age':23,'city':'Delhi'}\n",
     "\n",
-    "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
+    "#dict : mutable : can change the entire entry of the dictionary, but not just the key. A key-value pair can be modified. \n",
+    "# fastest searching\n",
+    "# cant keep key or value empty \n",
+    "# if no value assigned to key atleast add None to it \n",
     "\n",
+    "d1={'id':101,'name':'Amit','age':23,'city':'Delhi','city':'Allahabad'}\n",
+    "# If you create a duplicate key and assign a different value to it, it will overwrite the previous value assigned to the particular key. \n",
+    "# Example city is equal to Delhi, and city is equal to allahabad -> Now, if we run city= Allahabad, value overrided.\n",
+    "\n",
+    "\n",
+    "# It is not Mandatory to have only a string as key \n",
+    "# Can have an integer as key also as below examples \n",
+    "# Can be of any of the immutable data types \n",
+    "# like int, float, bool, string, complex, and tuple (not a list; it is mutable)\n",
     "d2={123:\"Deepak\"}\n",
     "\n",
-    "d1\n",
     "\n",
-    "\n"
+    "d1 "
    ]
   },
   {
@@ -798,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "e9695f54",
    "metadata": {},
    "outputs": [
@@ -816,12 +902,20 @@
    "source": [
     "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
     "\n",
-    "#d1['name']\n",
+    "# Get value from Key\n",
+    "# Slicing doesn't work in dictionary because here there is no indexing, only key-value pair, \n",
+    "# and data is extracted not based on index but based on key. \n",
+    "\n",
+    "Printing value based on key here \n",
+    "#d1['name']. -----case1\n",
     "#d1['age']\n",
     "#d1['salary'] #error\n",
     "\n",
+    "While fetching values :\n",
+    "1. when we fetch with key name - if value does not exist, there's an error. \n",
+    "2. When we fetch values using `get` and a key, it gives the default value of the key or none if the value does not exist. \n",
     "\n",
-    "#d1.get('name')\n",
+    "d1.get('name') #------case2\n",
     "#print(d1.get('salary'))\n",
     "d1.get('salary',25000)"
    ]
@@ -853,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "7b42cc6f",
    "metadata": {},
    "outputs": [
@@ -871,14 +965,17 @@
    "source": [
     "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
     "\n",
-    "del d1['name']\n",
+    "del d1['name'] # deletes key and value\n",
+    " \n",
+    "# keyerror: We get a  only in a dictionary \n",
+    "# when the key is not present in the dictionary. \n",
     "\n",
     "d1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "20929185",
    "metadata": {},
    "outputs": [
@@ -895,9 +992,11 @@
    ],
    "source": [
     "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
+    "Add values in a dictionary. \n",
+    "d1['age']=67000 #Not recommended. This will update the value if the key age already exists. \n",
+    "#d1.setdefault('age',89) #If the key already exists, it will neither add nor update the value for it. \n",
     "\n",
-    "#d1.setdefault('age',89)\n",
-    "#d1.setdefault('salary')\n",
+    "#d1.setdefault('salary') # Here, no value provided it will assign the value as none. \n",
     "d1.setdefault('salary',45000)\n",
     "d1"
    ]
@@ -911,13 +1010,13 @@
    "source": [
     "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
     "\n",
-    "d1.copy()\n",
-    "d1.clear()"
+    "d1.copy(). # deep copy\n",
+    "d1.clear() #clear the list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "0859e63a",
    "metadata": {},
    "outputs": [
@@ -934,8 +1033,8 @@
    ],
    "source": [
     "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
-    "\n",
-    "\n",
+    "# iteration\n",
+    "# returns only keys\n",
     "for x in d1:\n",
     "    print(x)\n",
     "\n"
@@ -943,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "2015cece",
    "metadata": {},
    "outputs": [
@@ -960,13 +1059,13 @@
     "\n",
     "k=list(d1.keys())\n",
     "v=list(d1.values())\n",
-    "it=list(d1.items())\n",
+    "it=list(d1.items()) # key value pair\n",
     "print(it)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "db8bc86e",
    "metadata": {},
    "outputs": [
@@ -982,13 +1081,13 @@
     }
    ],
    "source": [
-    "for x in d1.values():\n",
+    "for x in d1.values(): # returns values\n",
     "    print(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "7516e8da",
    "metadata": {},
    "outputs": [
@@ -1004,13 +1103,13 @@
     }
    ],
    "source": [
-    "for x in d1.items():\n",
+    "for x in d1.items(): # returns k,v pair\n",
     "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "e1337372",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1127,8 @@
    "source": [
     "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
     "\n",
-    "d1.pop()"
+    "d1.pop()  \n",
+    "d1.pop('age'). #return and remove k,v of a particular key"
    ]
   },
   {
@@ -1054,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "342cb767",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1172,7 @@
    "source": [
     "d1={'id':101,'name':'Amit','age':23,'city':'Delhi'}\n",
     "\n",
-    "d1.popitem()"
+    "d1.popitem()#return and remove  last entry of dict"
    ]
   },
   {
@@ -1098,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "1266abe4",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1219,10 @@
     "\n",
     "d2={'name':'Amit','age':45,'salary':67000}\n",
     "\n",
-    "\n",
+    "When updating dictionary:\n",
+    "- If key is present with the same values, no changes will happen.\n",
+    "- If different values for the same key, it will update it.\n",
+    "- If the key does not exist, it will add the key in the dictionary to be updated. \n",
     "d1.update(d2)\n",
     "\n",
     "\n",
@@ -1141,7 +1244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1={'101':{'id':101,'name':'Deepak'}}"
+    "#  We can make a nested dictionary also. \n",
+    " d1={'101':{'id':101,'name':'Deepak'}}"
    ]
   },
   {
@@ -1162,12 +1266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "e0c85b9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1={'people':[{'india':[{'id':101,'name':\"Amit\"},{'id':102,'name':'Deepak'}]}]}"
+    "# Q1 . \n",
+    "d1={'people':[{'india':[{'id':101,'name':\"Amit\"},{'id':102,'name':'Deepa k'}]}]}"
    ]
   },
   {
@@ -1203,7 +1308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
