add all the files with changes

--- a/JupyterFiles/KR_Session_13_MAR_16_2024.ipynb
+++ b/JupyterFiles/KR_Session_13_MAR_16_2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "92db00c1",
    "metadata": {},
    "outputs": [
@@ -16,21 +16,25 @@
     }
    ],
    "source": [
-    "# datetime :\n",
+    "# datetime : is module \n",
     "\n",
     "from datetime import date\n",
+    "# date is class\n",
     "\n",
     "\n",
-    "d1=date.today()\n",
+    "\n",
+    "d1=date.today(). # gives current date of system \n",
     "print(d1)\n",
     "\n",
     "d2=date(2023,4,21)\n",
+    "# ceating our own date object with given values \n",
+    "\n",
     "print(d2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "710c5e98",
    "metadata": {},
    "outputs": [
@@ -44,7 +48,8 @@
    ],
    "source": [
     "from datetime import time\n",
-    "\n",
+    "# time is a class \n",
+    "# time create kr sakte hai , isse current nikaal ni sakte for that dusri class hai \n",
     "\n",
     "t1=time(5,23,45)\n",
     "\n",
@@ -53,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a18812c1",
    "metadata": {},
    "outputs": [
@@ -61,40 +66,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024\n",
-      "3\n",
-      "16\n",
+      "2026\n",
+      "2\n",
+      "28\n",
       "5\n",
-      "13\n",
-      "21\n"
+      "0\n",
+      "30\n"
      ]
     }
    ],
    "source": [
     "from datetime import datetime\n",
+    "# module name - datetime. also     class name -datetime\n",
+    "# date n time dono k sath kaam kr sakte hai \n",
     "\n",
     "\n",
     "\n",
-    "dt1=datetime.today()\n",
+    "dt1=datetime.today() #system ka  date n time dono nikaal k deta hai \n",
     "#print(dt1)\n",
     "\n",
-    "dt2=datetime.now()\n",
+    "dt2=datetime.now() #system ka  date n time dono nikaal k deta hai + kisi time zome me convert karna hai to now() ka use kartey hai \n",
     "#print(dt2)\n",
     "\n",
     "\n",
-    "d1=datetime.now().date()\n",
+    "d1=datetime.now().date()      ##system ka  date n time dono nikaal k deta hai , usme de date extract kartey hai \n",
     "#print(d1)\n",
     "\n",
     "\n",
-    "t1=datetime.now().time()\n",
+    "t1=datetime.now().time()        ##system ka  date n time dono nikaal k deta hai , usme de time extract kartey hai \n",
     "#print(t1)\n",
     "\n",
     "\n",
-    "tmsp=datetime.now().timestamp()\n",
+    "tmsp=datetime.now().timestamp()     ##system ka  date n time dono nikaal k deta hai , usme de date extract kartey hai \n",
     "\n",
     "tmsp\n",
     "\n",
-    "dt2=datetime.fromtimestamp(tmsp)\n",
+    "dt2=datetime.fromtimestamp(tmsp) #returns date time object , from which we can extract lot of data \n",
+    "# 'Sat Feb 28 00:23:15 2026'\n",
     "\n",
     "print(dt2.year)\n",
     "print(dt2.month)\n",
@@ -106,7 +114,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "id": "18c96bc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sat Feb 28 00:23:15 2026'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time \n",
+    "from datetime import datetime\n",
+    "\n",
+    "tmsp=datetime.now().timestamp() \n",
+    "\n",
+    "time.ctime(tmsp)   #---> 'Sat Feb 28 00:23:15 2026' this is a string , now from string we cant ecxtract any data , only fro time date or date time format "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "44b6cf2f",
    "metadata": {},
    "outputs": [
@@ -122,9 +156,15 @@
    ],
    "source": [
     "dt1=datetime.today()\n",
+    "can change format of the date time it returns , in different formats using strftime(---format--) like below \n",
+    "to find more type of formats , check the link below for complete list \n",
+    "\n",
     "print(dt1.strftime(\"%d-%B-%Y\"))\n",
     "print(dt1.strftime(\"%d%m%Y\"))\n",
-    "print(dt1.strftime(\"%A  %d-%B-%Y %I:%M:%S  %p\"))"
+    "print(dt1.strftime(\"%A  %d-%B-%Y %I:%M:%S  %p\")). #m- min , s - sec etc\n",
+    "\n",
+    "but returns string and cant perform any action on it \n",
+    "need to convert to date time format "
    ]
   },
   {
@@ -139,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "03c6571b",
    "metadata": {},
    "outputs": [
@@ -154,7 +194,7 @@
    "source": [
     "st=\"23/04/2023\"\n",
     "\n",
-    "\n",
+    "to convert string date time to datetime format use strptime() coz operation can be done only on sasme types\n",
     "dt3=datetime.strptime(st,\"%d/%m/%Y\")\n",
     "\n",
     "print(dt3)"
@@ -222,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "cc1a73e8",
    "metadata": {},
    "outputs": [
@@ -237,6 +277,9 @@
    "source": [
     "from datetime import timedelta\n",
     "\n",
+    "\n",
+    "# to add or minus difference days in date we can do timedelta()\n",
+    "# to subtract in months ... then 1st convert month/ year to days  first \n",
     "dt5 =dt1 + timedelta(days=3)\n",
     "\n",
     "print(dt5)"
@@ -244,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b28c7946",
    "metadata": {},
    "outputs": [
@@ -259,7 +302,7 @@
    "source": [
     "import pytz\n",
     "\n",
-    "\n",
+    "to change the format to utc - to compate 2 utc date times \n",
     "dt6=datetime.now(pytz.UTC)\n",
     "\n",
     "print(dt6)"
@@ -272,6 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "time zone shortcut names \n",
+    "\n",
     "#https://en.wikipedia.org/wiki/List_of_tz_database_time_zones"
    ]
   },
@@ -292,7 +337,7 @@
    "source": [
     "dt1=datetime.now()\n",
     "\n",
-    "tz=pytz.timezone(\"Asia/Dubai\")\n",
+    "tz=pytz.timezone(\"Asia/Dubai\"). # some time zone not have short names ,... so use this this from the list in the link \n",
     "\n",
     "dt2=dt1.astimezone(tz)\n",
     "\n",
@@ -301,11 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "df9a4c22",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to get start date of the month \n",
+    "\n",
+    "\n",
     "start_date=datetime(int(datetime.now().strftime(\"%Y\")),int(datetime.now().strftime(\"%m\")),1)"
    ]
   },
@@ -339,32 +387,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "1522f14d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31"
+       "28"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# to get end date of the month\n",
+    "# way 1 \n",
+    "\n",
     "calendar.monthrange(int(datetime.now().strftime(\"%Y\")),int(datetime.now().strftime(\"%m\")))[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "5e44d1fc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to get end date of the month \n",
+    "# way 2\n",
+    "\n",
     "start_date=datetime(int(datetime.now().strftime(\"%Y\")),int(datetime.now().strftime(\"%m\")),calendar.monthrange(int(datetime.now().strftime(\"%Y\")),int(datetime.now().strftime(\"%m\")))[1])"
    ]
   },
@@ -378,7 +432,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-03-31 00:00:00\n"
+      "2026-02-28 00:00:00\n"
      ]
     }
    ],
@@ -396,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "e0794f4a",
    "metadata": {},
    "outputs": [
@@ -412,7 +466,17 @@
     }
    ],
    "source": [
-    "calendar.monthrange(2024,2)"
+    "calendar.monthrange(2024,2) \n",
+    "\n",
+    "# here 3 - month starting from day 4th day of week \n",
+    "# 0   sun\n",
+    "# 1   mon\n",
+    "# 2   tue\n",
+    "# 3   wed\n",
+    "# 4 thu\n",
+    "\n",
+    "\n",
+    "# 29 is the number of days i the month\n"
    ]
   },
   {
@@ -440,30 +504,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DDL : create,alter, drop\n",
-    "DML : insert,update,delete  # commit()\n",
-    "DQL : select"
+    "DDL : create,alter, drop.  #auto commit\n",
+    "DML : insert,update,delete  # not auto commit  , need to commit() manually every time we perform DML \n",
+    "DQL : select\n",
+    "\n",
+    "# sqllite available in python if not need to do other DB\n",
+    "# in python , ORM called as pickeling and unpickeling   - predefined module - pickle "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "e9a31a99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymysql\n",
+    "import pymysql      #. --only for mysql \n",
     "\n",
     "\n",
     "try:\n",
-    "    con=pymysql.connect(host=\"localhost\",user=\"root\",password=\"\",database=\"userdb133\")\n",
-    "    cur=con.cursor()\n",
-    "    cur.execute(\"create table user (id int, name varchar(256))\")\n",
+    "    con=pymysql.connect(host=\"localhost\",user=\"root\",password=\"\",database=\"userdb133\") \n",
+    "    #  default port 336 is used so not mentioned , if any other port configured then need to mention \n",
+    "    cur=con.cursor(). #cursor ka object banao, singleton object \n",
+    "    cur.execute(\"create table user (id int, name varchar(256))\") # cursor object se hi query execute kar paatey hai \n",
     "    \n",
     "    \n",
     "except Exception as ex:\n",
     "    print(ex)\n",
-    "finally:\n",
+    "finally:                #to be closed like this , if conn not opened using \"with\" \n",
     "    con.close()"
    ]
   },
@@ -477,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "bd7119b3",
    "metadata": {},
    "outputs": [],
@@ -490,7 +558,7 @@
     "    cur=con.cursor()\n",
     "    cur.execute(\"insert into user values(101,'Amit')\")\n",
     "    \n",
-    "    con.commit()\n",
+    "    con.commit()        #dml query .. manual commit needed \n",
     "except Exception as ex:\n",
     "    print(ex)\n",
     "finally:\n",
@@ -499,19 +567,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
+   "id": "b1099285",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eg - \n",
+    "\n",
+    "# if multiple row inserted ...commit is done at the last , till then sab buffer me rehta hai \n",
+    "\n",
+    "# if record in excel or csv , using panda pura insert kar sakte hai, wo table and column bhi usi k naam se banata hai \n",
+    "\n",
+    "\n",
+    "eg:\n",
+    "\n",
+    "import pandas as pd \n",
+    "\n",
+    "df=pd.DataFrame()\n",
+    "df.to_sql() #-- arguments me accoudingly data dalo asper the signature and available data \n",
+    " \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "51c7845b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parameterised query - way 1\n",
+    "\n",
     "import pymysql\n",
     "\n",
     "\n",
     "try:\n",
     "    con=pymysql.connect(host=\"localhost\",user=\"root\",password=\"\",database=\"userdb133\")\n",
     "    cur=con.cursor()\n",
-    "    data=[(102,\"Deepak\"),(103,\"Sam\"),(104,\"Rohan\")]\n",
-    "    sql=\"insert into user values (%s,%s)\"\n",
+    "    data=[(102,\"Deepak\"),(103,\"Sam\"),(104,\"Rohan\")]     #. - this data can come from anywhere at run time - user input /or file \n",
+    "    sql=\"insert into user values (%s,%s)\"        # when multiple values - parameterised value \n",
     "    cur.executemany(sql,data)\n",
     "    con.commit()\n",
     "except Exception as ex:\n",
@@ -530,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "0c9e03c4",
    "metadata": {},
    "outputs": [
@@ -544,6 +639,11 @@
     }
    ],
    "source": [
+    "# parameterised query - way 2\n",
+    "\n",
+    "# via user input\n",
+    "\n",
+    "\n",
     "import pymysql\n",
     "\n",
     "\n",
@@ -552,7 +652,8 @@
     "    cur=con.cursor()\n",
     "    id=int(input(\"Enter id :\"))\n",
     "    name=input(\"Enter name :\")\n",
-    "    sql=\"insert into user values ('%d','%s')\"%(id,name)\n",
+    "\n",
+    "    sql=\"insert into user values ('%d','%s')\"%(id,name) # when multiple values - parameterised value\n",
     "    cur.execute(sql)\n",
     "    con.commit()\n",
     "except Exception as ex:\n",
@@ -571,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "55bef6c5",
    "metadata": {},
    "outputs": [
@@ -584,6 +685,8 @@
     }
    ],
    "source": [
+    "# parameterised query - way 3\n",
+    "\n",
     "import pymysql\n",
     "\n",
     "\n",
@@ -592,9 +695,9 @@
     "    cur=con.cursor()\n",
     "   \n",
     "    cur.execute(\"select * from user\")\n",
-    "    #data=cur.fetchall()\n",
-    "    #data=cur.fetchmany(3)\n",
-    "    data=cur.fetchone()\n",
+    "    #data=cur.fetchall()    #gets all records  \n",
+    "    #data=cur.fetchmany(3)  # get 3 records , number can be changed \n",
+    "    data=cur.fetchone()        # get 1 record\n",
     "    print(data)\n",
     "    \n",
     "except Exception as ex:\n",
@@ -638,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "b4c385ec",
    "metadata": {},
    "outputs": [
@@ -652,6 +755,9 @@
     }
    ],
    "source": [
+    "# parameterised query - way 4\n",
+    "\n",
+    "\n",
     "import pymysql\n",
     "\n",
     "\n",
@@ -661,7 +767,7 @@
     "   \n",
     "    id=int(input(\"Enter id :\"))\n",
     "    name=input(\"Enter name :\")\n",
-    "    sql=\"update user set name='%s' where id='%d'\"%(name,id)   \n",
+    "    sql=\"update user set name='%s' where id='%d'\"%(name,id)    #////ew\n",
     "    cur.execute(sql)\n",
     "    con.commit()\n",
     "    \n",
@@ -712,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
