--- a/JupyterFiles/KR_Session_14_MAR_17_2024.ipynb
+++ b/JupyterFiles/KR_Session_14_MAR_17_2024.ipynb
@@ -162,7 +162,23 @@
    "id": "a8f80673",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# python default db , \n",
+    "# default server\n",
+    "\n",
+    "# mostly desktop based app\n",
+    "\n",
+    "plain files data saved \n",
+    "\n",
+    "# sqllite\n",
+    "# data saved in plain db files - can perform db operations \n",
+    "# all connection making with all db is standard\n",
+    "sql ki std query run hogi \n",
+    "create insert etc\n",
+    "yaha b DML hai to commit krna padeyga \n",
+    "\n",
+    "agar us location pe ja k file dekhengey ... data ajeeb dikheyga , but retrieve kiya to sahi data mileyga"
+   ]
   },
   {
    "cell_type": "code",
@@ -176,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "a05bd43d",
    "metadata": {},
    "outputs": [
@@ -192,8 +208,8 @@
     "try:\n",
     "    conn=sqlite3.connect(\"/Users/admin/Movies/test/user.db\")\n",
     "    cur=conn.cursor()\n",
-    "    #cur.execute(\"create table user (id int , name varchar(256))\")\n",
-    "    #cur.execute(\"insert into user values (101,'Amit')\")\n",
+    "    #cur.execute(\"create table user (id int , name varchar(256))\")      1\n",
+    "    #cur.execute(\"insert into user values (101,'Amit')\")        2\n",
     "    #conn.commit()\n",
     "    cur.execute(\"select * from user\")\n",
     "    \n",
@@ -218,7 +234,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#logging"
+    "#logging\n",
+    "\n",
+    "# in chat file \n",
+    "refer - logging.txt in notes folder"
    ]
   }
  ],
