--- a/JupyterFiles/KR_Session_15_MAR_30_2024.ipynb
+++ b/JupyterFiles/KR_Session_15_MAR_30_2024.ipynb
@@ -7,7 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Oops : "
+    "#Oops : \n",
+    "\n",
+    "object - any real world entity - runtime representation of object\n",
+    "class - data (or variables or attributes ) + methods (or behaviours)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -69,7 +74,9 @@
    "id": "d1f5bc92",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "self: "
+   ]
   },
   {
    "cell_type": "code",
@@ -197,7 +204,7 @@
     "#types variable\n",
     "\n",
     "instance variable : inside class using self only , outside class ref . variable\n",
-    "class varibale : inside class but outside any method and without self"
+    "class va  ribale : inside class but outside any method and without self"
    ]
   },
   {
