--- a/JupyterFiles/KR_session_11_MAR_9_2024.ipynb
+++ b/JupyterFiles/KR_session_11_MAR_9_2024.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4f9bc87b",
    "metadata": {},
    "outputs": [
@@ -131,10 +131,10 @@
     "x=2\n",
     "list1=[2,3,4,5]\n",
     "try:\n",
-    "    result=10/x\n",
+    "    result=10/x. ----\n",
     "    try:\n",
     "        print(list1[4])\n",
-    "    except IndexError as ex:\n",
+    "    except IndexError as ex:-----\n",
     "        print(ex)\n",
     "    print(result)\n",
     "except ZeroDivisionError :\n",
@@ -536,6 +536,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cf3a9fa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some notes on Exception Handling :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ad6ec0e2",
    "metadata": {},
    "outputs": [],
@@ -584,7 +594,182 @@
    "id": "636053d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Python initially has some exceptions, but if we import any additional libraries, then they may have their own defined exceptions. \n",
+    "We may have additional types of exceptions goes up. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ab4a744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Example\tTopic\tKey Concepts\n",
+    "Ex 1\tNormal execution\tNo error, all lines run sequentially\n",
+    "Ex 2\tUnhandled exception\tZeroDivisionError crashes the program\n",
+    "Ex 3\tBasic try-except\tCatches ZeroDivisionError, program continues\n",
+    "Ex 4\tNested try-except\tInner & outer try blocks handle different errors\n",
+    "Ex 5\tMultiple except blocks\tDifferent except for ZeroDivisionError vs IndexError\n",
+    "Ex 6\tGrouped exceptions\texcept (Error1, Error2) as ex: in one block\n",
+    "Ex 7\tGeneric Exception\tCatch-all handler using base Exception class\n",
+    "Ex 8\tSpecific + Generic\tSpecific exceptions before generic Exception\n",
+    "Ex 9\ttraceback module\ttraceback.print_exc() for detailed stack trace\n",
+    "Ex 10\tfinally (DB pattern)\tResource cleanup — con.close() always runs\n",
+    "Ex 11\ttry-except-finally\tfinally block always executes\n",
+    "Ex 12\ttry-except-else-finally\tComplete structure — else runs only if NO error\n",
+    "Ex 13\traise keyword\tManually raising exceptions for validation\n",
+    "Ex 14\tCatching raised errors\ttry-except catches the raised exception\n",
+    "Ex 15\tUnhandled raise\tWithout try-except, raised exception crashes\n",
+    "Ex 16\tCustom Exception class\tclass InvalidAgeError(Exception)\n",
+    "Ex 17\tUsing custom exception\traise InvalidAgeError(...) in functions\n",
+    "Ex 18\tCatching custom exception\tCustom exceptions caught by except Exception"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1396aa47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Cell\tComment Notes Added\n",
+    "Header\tOverview of Exception Handling, common exception types\n",
+    "Ex 1-2\tNormal execution vs unhandled ZeroDivisionError crash\n",
+    "Ex 3\tBasic try-except with ZeroDivisionError\n",
+    "Ex 4\tNested try-except blocks\n",
+    "Ex 5\tMultiple except blocks for different exceptions\n",
+    "Ex 6\tGrouping exceptions: except (Error1, Error2) as ex:\n",
+    "Ex 7\tGeneric Exception catch-all\n",
+    "Ex 8\tSpecific exceptions before generic Exception\n",
+    "Ex 9\ttraceback.print_exc() for detailed error info\n",
+    "Ex 10-11\tfinally block — always executes (resource cleanup)\n",
+    "Ex 12\tComplete try-except-else-finally structure\n",
+    "Ex 13\traise keyword for manual exception raising\n",
+    "Ex 14-15\tCatching vs not catching raised exceptions\n",
+    "Ex 16-18\tCustom exception class (InvalidAgeError)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d58da76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "Here's the complete list of all standard built-in exceptions in Python:\n",
+    "\n",
+    "🏗️ Exception Hierarchy (Base Classes)\n",
+    "Exception\tDescription\n",
+    "BaseException\tRoot class for ALL exceptions\n",
+    "Exception\tBase class for all non-exit exceptions\n",
+    "ArithmeticError\tBase class for math-related errors\n",
+    "LookupError\tBase class for key/index errors\n",
+    "OSError\tBase class for OS-related errors\n",
+    "ValueError\tBase class for value-related errors\n",
+    "BufferError\tBuffer operation errors\n",
+    "\n",
+    "🔢 Arithmetic / Math Errors\n",
+    "Exception\tDescription\tExample\n",
+    "ZeroDivisionError\tDivision or modulo by zero\t10 / 0\n",
+    "OverflowError\tResult too large to represent\tmath.exp(1000)\n",
+    "FloatingPointError\tFloating point operation failed\tRare, needs fpectl\n",
+    "\n",
+    "📋 Index / Key / Lookup Errors\n",
+    "Exception\tDescription\tExample\n",
+    "IndexError\tList/tuple index out of range\t[1,2,3][5]\n",
+    "KeyError\tDictionary key not found\t{\"a\":1}[\"b\"]\n",
+    "\n",
+    "📝 Type / Value Errors\n",
+    "Exception\tDescription\tExample\n",
+    "TypeError\tWrong data type used\t\"2\" + 2\n",
+    "ValueError\tCorrect type but wrong value\tint(\"abc\")\n",
+    "\n",
+    "📛 Name / Attribute Errors\n",
+    "Exception\tDescription\tExample\n",
+    "NameError\tVariable not defined\tprint(x) (x undefined)\n",
+    "AttributeError\tObject has no such attribute\t\"hello\".push(\"a\")\n",
+    "UnboundLocalError\tLocal variable referenced before assignment\tUsing var before =\n",
+    "\n",
+    "📂 File / OS Errors\n",
+    "Exception\tDescription\tExample\n",
+    "FileNotFoundError\tFile doesn't exist\topen(\"xyz.txt\")\n",
+    "FileExistsError\tFile already exists\tos.mkdir(\"existing_dir\")\n",
+    "PermissionError\tNo permission to access\tWriting to read-only file\n",
+    "IsADirectoryError\tExpected file, got directory\topen(\"/Users/\")\n",
+    "NotADirectoryError\tExpected directory, got file\tos.listdir(\"file.txt\")\n",
+    "TimeoutError\tOperation timed out\tNetwork timeout\n",
+    "ConnectionError\tBase for connection errors\tNetwork issues\n",
+    "ConnectionRefusedError\tConnection refused by server\tServer not running\n",
+    "ConnectionResetError\tConnection reset by peer\tServer dropped connection\n",
+    "ConnectionAbortedError\tConnection aborted\tConnection interrupted\n",
+    "BrokenPipeError\tWriting to a closed pipe\tPipe closed early\n",
+    "InterruptedError\tSystem call interrupted\tSignal interrupt\n",
+    "BlockingIOError\tNon-blocking I/O operation\tAsync I/O would block\n",
+    "ChildProcessError\tChild process operation failed\tProcess errors\n",
+    "ProcessLookupError\tProcess doesn't exist\tos.kill(bad_pid)\n",
+    "\n",
+    "📥 Import Errors\n",
+    "Exception\tDescription\tExample\n",
+    "ImportError\tModule import failed\timport nonexistent\n",
+    "ModuleNotFoundError\tModule not found (subclass of ImportError)\timport xyz123\n",
+    "\n",
+    "💾 Memory Errors\n",
+    "Exception\tDescription\tExample\n",
+    "MemoryError\tOut of memory\tCreating huge list\n",
+    "RecursionError\tMax recursion depth exceeded\tInfinite recursion\n",
+    "\n",
+    "⚙️ Syntax / Indentation Errors\n",
+    "Exception\tDescription\tExample\n",
+    "SyntaxError\tInvalid Python syntax\tif x = 5:\n",
+    "IndentationError\tWrong indentation\tMissing/extra indent\n",
+    "TabError\tMixing tabs and spaces\tInconsistent indent\n",
+    "\n",
+    "🔄 Iterator / Generator Errors\n",
+    "Exception\tDescription\tExample\n",
+    "StopIteration\tIterator exhausted (no more items)\tnext() on empty iterator\n",
+    "StopAsyncIteration\tAsync iterator exhausted\t__anext__() done\n",
+    "GeneratorExit\tGenerator closed\tgen.close()\n",
+    "\n",
+    "🔤 Encoding / Unicode Errors\n",
+    "Exception\tDescription\tExample\n",
+    "UnicodeError\tBase for Unicode errors\tUnicode operations\n",
+    "UnicodeEncodeError\tCannot encode character\t\"ñ\".encode(\"ascii\")\n",
+    "UnicodeDecodeError\tCannot decode bytes\tb'\\xff'.decode(\"utf-8\")\n",
+    "UnicodeTranslateError\tCannot translate character\tTranslation mapping error\n",
+    "⚠️ Warning Classes\n",
+    "Warning\tDescription\n",
+    "Warning\tBase class for all warnings\n",
+    "DeprecationWarning\tFeature will be removed in future\n",
+    "PendingDeprecationWarning\tFeature may be deprecated soon\n",
+    "RuntimeWarning\tSuspicious runtime behavior\n",
+    "SyntaxWarning\tSuspicious syntax\n",
+    "UserWarning\tUser-defined warnings\n",
+    "FutureWarning\tBehavior will change in future\n",
+    "ImportWarning\tImport-related warnings\n",
+    "UnicodeWarning\tUnicode-related warnings\n",
+    "ResourceWarning\tResource usage warnings\n",
+    "BytesWarning\tBytes-related warnings\n",
+    "\n",
+    "🔧 Other Standard Errors\n",
+    "Exception\tDescription\tExample\n",
+    "RuntimeError\tGeneral runtime error\tGeneric error\n",
+    "NotImplementedError\tAbstract method not implemented\tSubclass didn't override\n",
+    "AssertionError\tassert statement failed\tassert 1 == 2\n",
+    "EOFError\tUnexpected end of input\tinput() on closed stdin\n",
+    "SystemError\tInternal interpreter error\tPython internal bug\n",
+    "ReferenceError\tWeak reference to garbage collected object\tDead reference\n",
+    "\n",
+    "🚪 System Exit Exceptions (Not caught by except Exception)\n",
+    "Exception\tDescription\tExample\n",
+    "SystemExit\tRaised by sys.exit()\tsys.exit(0)\n",
+    "KeyboardInterrupt\tUser pressed Ctrl+C\tProgram interrupted\n",
+    "\n",
+    "📊 Total: ~65+ built-in exceptions & warnings in Python 3\n",
+    "Tip: The most commonly encountered ones in everyday coding are: TypeError, ValueError, KeyError, IndexError, NameError, AttributeError, FileNotFoundError, ZeroDivisionError, ImportError, and SyntaxError."
+   ]
   }
  ],
  "metadata": {
