--- a/JupyterFiles/KR_session_17_APRIL_6_2024.ipynb
+++ b/JupyterFiles/KR_session_17_APRIL_6_2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "222fd25d",
    "metadata": {},
    "outputs": [],
@@ -17,25 +17,30 @@
     "        return self.__id\n",
     "\n",
     "    def getName(self):\n",
-    "        return self.__name"
+    "        return self.__name\n",
+    "\n",
+    " here we are creating private variables , which are not accessible from outside the class\n",
+    " to access these variables we need to use getter and setter methods\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3b928c01",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  here we are creating object of Student class \n",
     "st=Student()\n",
-    "\n",
+    "# now we are setting values to the object \n",
     "st.setId(101)\n",
     "st.setName(\"Amit\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9d25fcc5",
    "metadata": {},
    "outputs": [
@@ -51,6 +56,8 @@
     }
    ],
    "source": [
+    "# here we are getting the values using the class opject and getter \n",
+    "# as the variable are private we can't access them directly \n",
     "st.getName()"
    ]
   },
@@ -81,7 +88,33 @@
    "id": "bf94e8b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from docutils.utils.math.tex2unichar import space\n",
+    "MultiThreading - \n",
+    "Two types of threading :\n",
+    "2. process based -> executing multiple task in separate process at the same time - where each task is a separate individual process \n",
+    "                 - eg : multiple applications running at the same time in the laptop\n",
+    "                 - each process has its own memory space\n",
+    "                 - each process has its own copy of the variables\n",
+    "                 - each process has its own copy of the code\n",
+    "                 - each process has its own copy of the data\n",
+    "                 - each process has its own copy of the stack\n",
+    "                 - each process has its own copy of the heap\n",
+    "1. thread based - executing multiple task in separate thread at the same time - where each task is a separate individual thread \n",
+    "                 - eg : multiple applivations running at the same time in the laptop\n",
+    "                 ->in pne process also we do multiple task running on seperate individual threads , that is called thread based \n",
+    "                  where each task is seperate individual part of same task "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c6217ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Trying move and jump without and with multithreading "
+   ]
   },
   {
    "cell_type": "code",
@@ -89,15 +122,60 @@
    "id": "4ed5a762",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Trying move and jump without  multithreading \n",
+    "\n",
+    "import time\n",
+    "from threading import *\n",
+    "\n",
+    "\n",
+    "def move():\n",
+    "    for x in range(5):\n",
+    "        print(\"object moving..\")\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "def jump():\n",
+    "    for x in range(5):\n",
+    "        print(\"object jumping..\")\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "\n",
+    "move()\n",
+    "jump()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "03fa0872",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object moving..\n",
+      "object jumping..\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object moving..object jumping..\n",
+      "\n",
+      "object moving..object jumping..\n",
+      "\n",
+      "object jumping..\n",
+      "object moving..\n",
+      "object moving..object jumping..\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "# Trying move and jump   with multithreading \n",
+    "\n",
     "import time\n",
     "from threading import *\n",
     "\n",
@@ -117,32 +195,47 @@
     "t2=Thread(target=jump)\n",
     "\n",
     "\n",
-    "t1.start()\n",
-    "t2.start()"
+    "t1.start() #Method starts with thread, which in turn calls the target method, move. \n",
+    "t2.start() #Method starts with thread, which in turn calls the target method, jump.\n",
+    "\n",
+    "# python Thread is the main thread which runs the other two threads, T1 and T2. \n",
+    "\n",
+    "# now move and jump execute parallely"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe9eef2c",
+   "id": "8ce696f5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "Multithreading - for synchronisation we have -\n",
+    "Lock - acquire\n",
+    "    - release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5683c90b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example without lock and lock acquire and release \n",
+    "\n",
     "#process : \n",
     "#thread :\n",
     "import time\n",
     "from threading import *\n",
     "\n",
-    "l=Lock()\n",
     "def msg(name):\n",
-    "    l.acquire()\n",
     "    for x in range(5):\n",
     "        print(\"Good Morning..\",end=\"\")\n",
     "        time.sleep(1)\n",
     "        print(name)\n",
-    "    l.release()\n",
     "\n",
-    "t1=Thread(target=msg,args=('Sachin',))\n",
+    "t1=Thread(target=msg,args=('Sachin',))      -converted args to tuple \n",
     "t2=Thread(target=msg,args=('Dhoni',))\n",
     "t3=Thread(target=msg,args=('Virat',))\n",
     "\n",
@@ -154,7 +247,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "fe9eef2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example with lock and lock acquire and release \n",
+    "\n",
+    "\n",
+    "#process : \n",
+    "#thread :\n",
+    "import time\n",
+    "from threading import *\n",
+    "\n",
+    "l=Lock()    - lock is a predefined class\n",
+    "def msg(name):\n",
+    "    l.acquire()     # ---- is block me ek bar me ek hi thread ghusta hai jab tak ye block complete nahi ho jata \n",
+    "    for x in range(5):\n",
+    "        print(\"Good Morning..\",end=\"\")\n",
+    "        time.sleep(1)\n",
+    "        print(name)\n",
+    "    l.release()\n",
+    "\n",
+    "t1=Thread(target=msg,args=('Sachin',))      -converted args to tuple \n",
+    "t2=Thread(target=msg,args=('Dhoni',))\n",
+    "t3=Thread(target=msg,args=('Virat',))\n",
+    "\n",
+    "\n",
+    "t1.start()\n",
+    "t2.start()\n",
+    "t3.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b53e627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Trying to calculate time needed for - running the program  without using multi-threading \n",
+    "\n",
+    "\n",
+    "import time\n",
+    "def doubles(numbers):\n",
+    "    for n in numbers:\n",
+    "        time.sleep(1)\n",
+    "        print('Double value :',2*n)\n",
+    "\n",
+    "\n",
+    "def squares(numbers):\n",
+    "    for n in numbers:\n",
+    "        time.sleep(1)\n",
+    "        print('Squaers value :',n*n)\n",
+    "\n",
+    "numbers=[1,2,3,4,5,6]\n",
+    "begintime=time.time()\n",
+    "doubles(numbers)\n",
+    "squares(numbers)\n",
+    "endtime=time.time()\n",
+    "print('The total time taken :',endtime-begintime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "43f4ae23",
    "metadata": {},
    "outputs": [
@@ -179,6 +336,8 @@
     }
    ],
    "source": [
+    "# Trying to calculate time needed for - running the program  using multi-threading \n",
+    "\n",
     "\n",
     "import time\n",
     "from threading import *\n",
@@ -200,7 +359,15 @@
     "t1.start()\n",
     "t2.start()\n",
     "endtime=time.time()\n",
-    "print('The total time taken :',endtime-begintime)"
+    "print('The total time taken :',endtime-begintime)\n",
+    "\n",
+    "Here we have a problem, as there are three threads: main thread, d1 thread, d2 thread, when we are using multi-threading. \n",
+    "Now, what can happen is even before T1 and T2 complete the task, the main thread might complete its task, \n",
+    "which is calculation of time and printed before everything gets completed,\n",
+    " which should happen at the end of T1 and T2 processing. \n",
+    " As you can see, the total time taken is calculated before t1 and t2 process or complete their calculation, which is wrong. \n",
+    "\n",
+    " To avoid such a scenario, use join in thread. \n"
    ]
   },
   {
@@ -210,6 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    " \n",
     "\n",
     "import time\n",
     "from threading import *\n",
@@ -233,7 +402,43 @@
     "t1.join()\n",
     "t2.join()\n",
     "endtime=time.time()\n",
-    "print('The total time taken :',endtime-begintime)"
+    "print('The total time taken :',endtime-begintime)\n",
+    "\n",
+    "T1.join and t2.join means I am joining the main thread after t1 and t2.\n",
+    " The main thread will be executing only after t1 and t2 finish their calculation.\n",
+    " So the correct time will be printed. \n",
+    "\n",
+    " Read the concept of join in multi-threading in Python again. \n",
+    " Here, the main thread is depending on the processing of t1 and t2. And one thread depends on the processing of another; we use join. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6af7f1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1873d503",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Daemon threads are low-priority threads which are used to give support to other processes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f821f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "There is one more module, _thread, with the help of which we can create a thread directly. It does not have too many functions and methods, so it is less preferred. \n",
+    "Only two things we can do here: make thread and start. "
    ]
   },
   {
@@ -693,10 +898,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "260c6b5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "/Users/ana/myprojects/PythonKr/JupyterFiles/KR_session_17_APRIL_6_2024.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ad884af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import * \n",
+    "from tkinter import messagebox \n",
+    "def getvalue:\n",
+    "    u=e1.get()\n",
+    "    p=e2.getO\n",
+    "    if not u or not p:\n",
+    "        messagebox.showerror(title=\"login fail\", message=\"username/password can't be en\")\n",
+    "    if u==\"root\" and p==\"redhat\":\n",
+    "        root.destroy()\n",
+    "        master=Tk()\n",
+    "        master.geometry(\"800x800\") \n",
+    "        master.config(bg=\"#36522f\")\n",
+    "        master.title(\"Home page\")\n",
+    "        naster.mainloop()\n",
+    "    else:\n",
+    "        messagebox.showerror(title=\"login fail\", message=\"username/password wrong\")\n",
+    "root=TkO\n",
+    "root.geometry(\"800x800\")\n",
+    "root.config(bg=\"#3e4259\")\n",
+    "root.title(\"login page\")\n",
+    "\n",
+    "f1=Frame(root)"
+   ]
   }
  ],
  "metadata": {
@@ -715,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
