--- a/JupyterFiles/KR_Session_16_MAR_31_2024.ipynb
+++ b/JupyterFiles/KR_Session_16_MAR_31_2024.ipynb
@@ -31,8 +31,18 @@
     "\"Amit\"+\"kumar\"\n",
     "list1+list2\n",
     "\n",
-    "\n",
-    "dict1+dict2 #error"
+    "tuple+ tuple #possible \n",
+    "dict1+dict2 #error. not doable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7810496",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(int) # to find methods of data types "
    ]
   },
   {
@@ -42,6 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "every operator has a corresponding magic method \n",
+    "\n",
     "+ => __add__\n",
     "- => __sub__\n",
     "* => __mul__\n",
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "89a4599d",
    "metadata": {},
    "outputs": [],
@@ -67,6 +79,12 @@
     "    def __init__(self,price):\n",
     "        self.price=price\n",
     "        \n",
+    "\n",
+    "# here we are overloading add operator -\n",
+    "# initially Book dint have add dunctionality \n",
+    "# we are adding the magic method --add-- in the book class \n",
+    "\n",
+    "# this works for 2 numbers b1+b2\n",
     "    def __add__(self,other):\n",
     "            return self.price+other.price"
    ]
@@ -173,11 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "8b472cc3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# but for adding 3 variables or n number of   \n",
+    "\n",
     "class Book:\n",
     "    def __init__(self,price):\n",
     "        self.price=price\n",
@@ -718,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
